big fix: mobile, gray bg overflow

--- a/src/App.css
+++ b/src/App.css
@@ -244,7 +244,7 @@ header.sticky .hvr-underline-from-center:before {
 	background-color: black;
 	color: white;
 	padding: 150px 0 100px 0;
-	height: 120vh;
+	height: 100vh;
 }
 
 .banner .container-2 {
@@ -369,7 +369,6 @@ header.sticky .hvr-underline-from-center:before {
 	justify-content: center;
 	align-items: center;
 	z-index: 3;
-	background: #222;
 }
 .skills .container {
 	position: relative;
@@ -581,6 +580,9 @@ header.sticky .hvr-underline-from-center:before {
 }
 
 @media (max-width: 390px) {
+	.banner .container-2 {
+		top: 3.5%;
+	}
 	.banner h1 {
 		font-size: 64px;
 	}
